Windows: Use logical DPI to activate High DPI scaling.

High DPI should be disabled when the user chooses small fonts on a
High DPI monitor, resulting in lower logical DPI. The auto-algorithm
should then be equivalent to that of the device pixel ratio scaling
of Qt 5.5.

Task-number: QTBUG-49195
Change-Id: I756770ec7251b5b9b901253ded82e829aa50d38b
Reviewed-by: Alessandro Portale <alessandro.portale@theqtcompany.com>